@@ -1,6 +1,7 @@
 11 March 2016: Wouter
 	- Remove warning about unused parameter in event_pluggable.c.
 	- Fix libev usage of dispatch return value.
+	- No side effects in tolower() call, in case it is a macro.
 
 10 March 2016: Wouter
 	- Fixup backend2str for libev.
